# fitness_tracker

./: .gitignore  CMakeLists.txt
data/: workouts.csv
include/: CsvParser.hpp  Exporter.hpp  Filter.hpp  FitnessException.hpp  Statistics.hpp  WorkoutRecord.hpp
src/: CsvParser.cpp  Exporter.cpp  Filter.cpp  Statistics.cpp  main.cpp
tests/: CMakeLists.txt  test_filter.cpp  test_parser.cpp  test_statistics.cpp
